# taskpilot

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  deploy.ps1
.cargo/: config.toml
.github/: copilot-instructions.md
.github/prompts/: echo-test.md  echo-test.prompt.md  generate-new-github-release.prompt.md
.github/skills/taskpilot/: SKILL.md
.github/skills/taskpilot/references/: CONFIG-REFERENCE.md  TASK-FORMATS.md
.github/workflows/: release.yml
docs/: CONTINUOUS-OPERATION.md
src/: app.rs  autostart.rs  cli.rs  config.rs  config_diagnostics.rs  executor.rs  lib.rs  logging.rs  main.rs  renderer.rs  runtime_config.rs  scheduler.rs  single_instance.rs  task_sources.rs  timezone.rs  tray.rs  updater.rs  workspace.rs
src/ui/: dashboard.rs  job_detail.rs  mod.rs  settings.rs  sidebar.rs  task_detail.rs
tests/: cli_integration.rs  config_load_diagnostics.rs  timezone_config.rs
tests/common/: mod.rs
tests/fixtures/: config_basic.toml  config_escape.toml  config_failing.toml  config_retries.toml  config_shell.toml  config_timeout.toml  config_triggers.toml  config_triggers_cycle.toml  config_triggers_failure.toml  config_working_dir.toml
tests/fixtures/external_tasks/: batch.toml  greet.toml
