[package]
name = "taskpilot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
notify-rust = "4"
dirs = "5"
tray-icon = "0.14"
image = "0.25"
notify = "7"
notify-debouncer-mini = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
