[package]
name = "taskpilot"
version = "0.1.9"
edition = "2021"

[lib]
name = "taskpilot"
path = "src/lib.rs"

[[bin]]
name = "taskpilot"
path = "src/main.rs"

[[bin]]
name = "taskpilot-cli"
path = "src/cli.rs"

[dependencies]
eframe = { version = "0.28", features = ["wgpu"] }
wgpu = "0.20"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
notify-rust = "4"
dirs = "5"
tray-icon = "0.14"
image = "0.25"
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
semver = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
